--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         minSdkVersion 16
-        versionCode 1
+        versionCode 2
         versionName String.format("%.0f.%02d.%3\$ty%3\$tm%3\$td%3\$tH%3\$tM", versionCode / 9 + 0.5, (versionCode + 8) % 9, new Date())
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -27,6 +27,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleDynamicVersion
+    implementation 'com.android.support:appcompat-v7:26.+'
     //noinspection GradleDynamicVersion
     implementation 'com.android.support:customtabs:26.+'
     testImplementation 'junit:junit:4.12'
