--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <application>
         <activity
+            android:exported="false"
             android:name=".ChromeTabHelper$Activity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
         </activity>
