--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         minSdkVersion 16
-        versionCode 3
+        versionCode 4
         versionName String.format("%.0f.%02d.%3\$ty%3\$tm%3\$td%3\$tH%3\$tM", versionCode / 9 + 0.49, (versionCode + 8) % 9, new Date())
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -26,12 +26,9 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    //noinspection GradleDynamicVersion
-    implementation 'com.android.support:appcompat-v7:26.+'
-    //noinspection GradleDynamicVersion
-    implementation 'com.android.support:customtabs:26.+'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.browser:browser:1.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
